# mitmrouter

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mitmrouter.sh  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/workflows/: ci.yml  release.yml  security.yml
.github/workflows/ISSUE_TEMPLATE/: addon_request.yml  bug_report.yml  feature_request.yml
addons/: __init__.py
addons/core/: __init__.py  addon_base.py  addon_registry.py
addons/external_tools/: __init__.py  suricata_ids.py  wireshark_dissector.py  zeek_network_monitor.py
addons/mitmproxy_native/: __init__.py  api_spec_extractor.py  certificate_logger.py  inventory_tracker.py  json_traffic_logger.py
addons/reporting/: __init__.py  session_report.py
config/profiles/: default.yml  ethernet.yml  forensic.yml  pentest.yml  pinning.yml
docs/adr/: ADR-002-sigstore-over-gpg.md  ADR-003-addon-manifest-schema.md  ADR-005-env-var-profile-secrets.md
docs/architecture/: overview.md
docs/features/: CHANGELOG.md  COMPLETE_MITMROUTER_V2_ALL_CODE.md  DELIVERY_SUMMARY.txt  DOCUMENT_MAP.md  FEATURES_INDEX.md  FEATURES_SUMMARY.md  FEATURE_IMPLEMENTATIONS.md  FEATURE_IMPLEMENTATIONS_PART2.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_QUICK_REFERENCE.md  MITMROUTER_CODE_PART1.md  MITMROUTER_CODE_PART2.md  PACKAGE_STATUS_SUMMARY.md  README_FEATURES.md
docs/features/v2.1/: QUICKSTART.md
docs/phase-roadmaps/: phase-2.md
docs/runbooks/: ethernet-intercept.md  wifi-ap-intercept.md
lib/: addon_manager.sh  cert_toolkit.sh  config_parser.sh  docker_utils.sh  error_handling.sh  evidence_export.sh  logging.sh  mitmproxy_manager.sh  monitoring.sh  network_setup.sh  profile_orchestrator.sh  traffic_classifier.sh
tests/: conftest.py  test_certificate_logger.py  test_session_report.py  test_suite.sh
tests/fixtures/: api_spec_sample.yaml  certificates_sample.json  inventory_sample.json  traffic_sample.jsonl
tests/integration/: test_addon_combo.py
tests/unit/: test_api_spec_extractor.py  test_certificate_logger.py  test_inventory_tracker.py
