[project]
name = "mitmrouter"
version = "0.2.0"
description = "Extensible mitmproxy addon ecosystem for traffic capture, analysis, and reporting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MitmRouter Contributors" }
]
keywords = ["mitmproxy", "network", "security", "addon", "traffic-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "mitmproxy>=10.3.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pip-tools>=7.0.0",
]

[project.entry-points."mitmrouter.addons"]
inventory_tracker = "addons.mitmproxy_native.inventory_tracker:InventoryTracker"
json_traffic_logger = "addons.mitmproxy_native.json_traffic_logger:JsonTrafficLogger"
certificate_logger = "addons.mitmproxy_native.certificate_logger:CertificateLogger"
api_spec_extractor = "addons.mitmproxy_native.api_spec_extractor:ApiSpecExtractor"
wireshark_dissector = "addons.external_tools.wireshark_dissector:WiresharkDissector"
zeek_network_monitor = "addons.external_tools.zeek_network_monitor:ZeekNetworkMonitor"
suricata_ids = "addons.external_tools.suricata_ids:SuricataIds"
session_report = "addons.reporting.session_report:SessionReportAddon"

# ── Tool configurations ──────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["addons"]

# ── Pytest configuration (was pytest.ini) ────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=addons",
    "--cov-report=term-missing",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:mitmproxy.*",
]

# ── Coverage configuration ───────────────────────────────────────────

[tool.coverage.run]
source = ["addons"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]